--- a/manuscripts/24-radim-fertility-usa/24-radim-fertility-usa.qmd
+++ b/manuscripts/24-radim-fertility-usa/24-radim-fertility-usa.qmd
@@ -65,10 +65,12 @@ pull_mods <-  fs::path_expand(
   "/Users/joseph/Library/CloudStorage/Dropbox-v-project/data/24-radim-usa/24-05-data_for_joe.csv"
 )
 
-# SET TO YOUR DIRECTORY FOR SAVING VARIABLES
+# set to your directory
 push_mods <-  fs::path_expand(
   "/Users/joseph/Library/CloudStorage/Dropbox-v-project/data/24-radim-usa"
 )
+
+#
 
 
 # use p_load to load / install the packages
@@ -122,8 +124,11 @@ loadfonts(device = "all")
 n_participants <- readRDS(here::here(push_mods, "n_participants"))
 n_total <-  margot::here_read("n_total")
 
+# missing graph baseline
+here_save(missing_total, 'missing_total')
+
 # propensity score graph 
-#love_plot_one <- margot::here_read("love_plot_one")
+love_plot_one <- margot::here_read("love_plot_one")
 
 # transition table
 transition_table <- margot::here_read("transition_table")
@@ -142,7 +147,7 @@ graph_density_of_exposure_up<-margot::here_read("graph_density_of_exposure_up")
 graph_density_of_exposure_mean<-margot::here_read("graph_density_of_exposure_mean")
 
 
-# read smoker result (not in a table)
+#  results
 out_tab_contrast_t2_smoker_binary <- margot::here_read("out_tab_contrast_t2_smoker_binary")
 out_tab_contrast_t2_smoker_binary_1 <- margot::here_read("out_tab_contrast_t2_smoker_binary_1")
 
@@ -152,15 +157,16 @@ tab_ego<- margot::here_read("tab_ego")
 tab_reflective<-  margot::here_read("tab_reflective")
 tab_social<-  margot::here_read("tab_social")
 
-# group tabs
-group_tab_health <- margot::here_read("group_tab_health")
-group_tab_body <- margot::here_read("group_tab_body")
-group_tab_ego <-margot::here_read("group_tab_ego")
-group_tab_reflective <- margot::here_read("group_tab_reflective")
-group_tab_social <- margot::here_read("group_tab_social")
+# contrasts for subgroups
+contrast_male_t2_two_or_more_kids <- margot::here_read("contrast_male_t2_two_or_more_kids")
+contrast_female_t2_two_or_more_kids <- margot::here_read("contrast_female_t2_two_or_more_kids")
+
+sub_group_compare <- margot::compute_difference(contrast_male_t2_two_or_more_kids, contrast_female_t2_two_or_more_kids, type = "RR")
+
+# sub_group_compare
+
 
 # check N
-
 N <- n_participants
 sub_title = "Forgiveness: only shift those below average to average, N = 34,749"
 
